--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-particles": "^2.12.2",
     "tailwind-merge": "^3.1.0",
+    "tsparticles": "^3.8.1",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
