--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@sanity/client": "^6.29.1",
+    "@sanity/image-url": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.9.4",
     "lucide-react": "^0.487.0",
     "motion": "^12.6.5",
     "next": "15.2.4",
@@ -20,6 +24,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-particles": "^2.12.2",
+    "resend": "^4.5.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tsparticles": "^3.8.1",
     "tw-animate-css": "^1.2.5"
